--- a/sw/.gitattributes
+++ b/sw/.gitattributes
@@ -1,6 +1,2 @@
 # Set default behaviour, in case users don't have core.autocrlf set.
-* text=auto
-
-# Declare files that will always have LF line endings on checkout.
-*.sh text eol=lf
-*.lua text eol=lf
+* text eol=lf
