--- a/sw-new/package.json
+++ b/sw-new/package.json
@@ -6,6 +6,8 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "mobx": "^2.6.3",
+    "mobx-react": "^4.0.3",
     "onsenui": "^2.0.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
