--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "morgan": "^1.7.0"
   },
