--- a/sw-new/package.json
+++ b/sw-new/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "formsy-react": "^0.18.1",
     "mobx": "^2.6.3",
     "mobx-react": "^4.0.3",
     "onsenui": "^2.0.4",
