--- a/sw-new/package.json
+++ b/sw-new/package.json
@@ -7,12 +7,13 @@
   },
   "dependencies": {
     "formsy-react": "^0.18.1",
+    "material-ui": "^0.16.4",
     "mobx": "^2.6.3",
     "mobx-react": "^4.0.3",
-    "onsenui": "^2.0.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-onsenui": "^1.0.3"
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
