--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -6,6 +6,7 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "morgan": "^1.7.0"
