--- a/sw-new/package.json
+++ b/sw-new/package.json
@@ -11,6 +11,7 @@
     "mobx-react": "^4.0.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-mui-speeddial": "^0.0.5",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1"
   },
